# IMAndroidCplusplusProject

./: .gitignore
TUIKit/IMCppSDK/imcppsdk/cpp/: CMakeLists.txt  im_cxx_sdk_jni.cmake
TUIKit/IMCppSDK/imcppsdk/cpp/engine/: download_callback_impl.cpp  send_callback_impl.cpp  send_callback_impl.h  v2_im_common.h  v2_im_engine.cpp  v2_im_engine.h  value_varable_callback_impl.h
TUIKit/IMCppSDK/imcppsdk/cpp/include/: V2TIMCommon.h  V2TIMCommunity.h  V2TIMCommunityManager.h  V2TIMConversation.h  V2TIMConversationManager.h  V2TIMDefine.h  V2TIMErrorCode.h  V2TIMFriendship.h  V2TIMFriendshipManager.h  V2TIMGroup.h  V2TIMGroupManager.h  V2TIMListener.h  V2TIMManager.h  V2TIMMessage.h  V2TIMMessageManager.h  V2TIMOfficialAccount.h  V2TIMSignaling.h
TUIKit/IMCppSDK/imcppsdk/cpp/jni/basic/: java_basic_jni.cpp  java_basic_jni.h  jni_helper.cpp  jni_util.h
TUIKit/IMCppSDK/imcppsdk/cpp/jni/convert/: call_experimental_api_jni.cpp  call_experimental_api_jni.h  conversation_jni.cpp  conversation_jni.h  conversation_list_filter_jni.h  conversation_operation_result_jni.cpp  download_param_jni.cpp  elem_handler_jni.cpp  elem_processor_jni.cpp  friend_add_application_jni.cpp  friend_application_jni.h  friend_application_result_jni.h  friend_group_jni.cpp  friend_info_jni.h  friend_info_result_jni.cpp  friend_info_result_jni.h  friend_operation_result_jni.h  friend_search_param_jni.h  group_application_jni.h  group_at_info_jni.cpp  group_change_info_jni.cpp  group_elem_handler_jni.cpp  group_elem_handler_jni.h  group_info_jni.cpp  group_info_jni.h  group_info_result_jni.cpp  group_info_result_jni.h  group_member_change_info_jni.h  group_member_full_info_jni.cpp  group_member_full_info_jni.h  group_member_info_jni.cpp  group_member_info_jni.h  group_member_info_result_jni.cpp  group_member_info_result_jni.h  group_member_operation_result_jni.cpp  group_message_read_member_list_jni.cpp  group_search_param.cpp  group_topic_info_jni.cpp  (+27 more)
TUIKit/IMCppSDK/imcppsdk/cpp/util/: LogUtil.h  jni_json_objarr_util.cpp  jni_json_objarr_util.h
(+262 files in other folders)
